--- a/css/style.css
+++ b/css/style.css
@@ -88,12 +88,10 @@ button {
 /*! Overlay
 /*!_________________________________________________________________*/
 .overlay {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100vh;
-  opacity: 0.5;
   position: fixed;
-  z-index: 1;
   display: none;
 }
 
@@ -393,7 +391,8 @@ ___________________________________________*/
   margin-right: 25px;
 }
 .s-cards__item-wrapper__item-img {
-  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
 }
 .s-cards__item-wrapper__item__wrapper-text {
   width: 100%;
