--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ ___________________________________________*/
   border: 1px solid white;
   border-radius: 24px;
   background-color: white;
+  position: relative;
 }
 
 /* Slider
@@ -340,11 +341,10 @@ ___________________________________________*/
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   overflow: hidden;
-  transition: height 0.6s;
+  transition: all 1s;
 }
 .s-cards__item-wrapper_active{
-  height: auto;
-  /* transition: all 0.3s ease-in-out; */
+  height: calc((4 * 300px) + 50px);
 }
 .s-cards__item-wrapper__item {
   width: 100%;
@@ -400,6 +400,35 @@ ___________________________________________*/
   margin: 0 15px 0 0 ;
 }
 
+/* ArrowUP
+___________________________________________*/
+
+.arrow_top{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgb(203, 17, 171);
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  position: fixed;
+  left: 5%;
+  bottom: 70%;
+  color: #fff;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.arrow_top:hover{
+  background: rgba(203, 17, 171, 0.8);
+}
+
+.arrow_top.active{
+  visibility: visible;
+  opacity: 1;
+  bottom: 15%;
+}
 /* Center
 ___________________________________________*/
 /* Color
